--- a/#src/dad.html
+++ b/#src/dad.html
@@ -10,11 +10,9 @@
           crossorigin="anonymous">
     <script defer src="./js/todo-app.js"></script>
     <script>
-
       document.addEventListener('DOMContentLoaded', function(){
-        // заголовок он же идентификатор
         title = 'Папин Список Дел';
-        createTodoApp(title, []);
+        createTodoApp(title);
       });
     </script>
 </head>
